Adding pretty background images and sprites.

--- a/book/css/screen.css
+++ b/book/css/screen.css
@@ -104,12 +104,12 @@ p {
 
 /* line 62, ../scss/screen.scss */
 .page_sitting-in-the-park {
-  background: url('../img/../../storyboard/storyboard1.jpg?1375555533') no-repeat;
+  background: url('../img/bg_park1.jpg?1377318992') no-repeat;
 }
 
 /* line 66, ../scss/screen.scss */
 .page_alice-is-bored {
-  background: url('../img/../../storyboard/storyboard2.jpg?1375576459') no-repeat;
+  background: url('../img/bg_park2.jpg?1377374754') no-repeat;
 }
 
 /* line 70, ../scss/screen.scss */
