--- a/book/scss/screen.scss
+++ b/book/scss/screen.scss
@@ -1,5 +1,5 @@
-@import "animation-studio";
 @import "compass/css3/";
+@import "animation-studio";
 @import "compass/reset";
 
 // Variables
@@ -60,12 +60,18 @@ p {
 
 // Pages
 .page_sitting-in-the-park {
-	@include background(image-url("../../storyboard/storyboard1.jpg") no-repeat);
+	@include background(image-url("bg_park1.jpg") no-repeat);
 }
 
+$sleepy-eyes: 'eyes';
 .page_alice-is-bored {
-	@include background(image-url("../../storyboard/storyboard2.jpg") no-repeat);
+	@include background(image-url("bg_park2.jpg") no-repeat);
+	.eyes {
+	  @include animation-sequence($sleepy-eyes, 1s);
+	}
 }
+@include animation-sequence-sprite-generator($sleepy-eyes);
+@include animation-sequence-keyframes($sleepy-eyes);
 
 .page_rabbit-appears {
 	@include background(image-url("../../storyboard/storyboard3.jpg") no-repeat);
