--- a/book/scss/screen.scss
+++ b/book/scss/screen.scss
@@ -9,7 +9,6 @@ html, body {
 	background: #000;
 	height: 100%
 }
-
 // Extendables
 %visuallyhidden { // hidden from view, not from screen readers!
   position: absolute; 
@@ -39,7 +38,9 @@ html, body {
 @include keyframes(hide-if-animation-enabled) {
     100% { opacity: 0; }
 }
-
+@include keyframes(show-if-animation-enabled) {
+    100% { opacity: 1; }
+}
 // Dialog
 
 //p:not(.caption) { revisit if you want to make a more storybook version
@@ -65,6 +66,10 @@ p {
 
 .scene.cue {
 	@extend %shown;
+}
+
+.scene-park {
+	padding-bottom: 2px;
 }
 
 // Pages
@@ -135,7 +140,45 @@ $sleepy-eyes: 'eyes';
 }
 
 .page_the-hole {
-	@include background(image-url("../../storyboard/storyboard5.jpg") no-repeat);
+	@include background(image-url("bg_park5_1.png") no-repeat,
+		radial-gradient(70% 60%, circle closest-side, #eb125d, #000));
+	.foreground {
+		height: 100%;
+		@include background(image-url("bg_park5_2.png") no-repeat 100% 100%);
+		@include background-size(100% auto);
+	}
+	.rabbit {
+		@include background(image-url("park5_rabbit.png"));
+		@include background-size(100% 100%);
+		position: absolute;
+		top: 15%; left: 60%;
+		width: 800/2048*300px; height: 600/1536*635px;
+		@include opacity(0);
+		z-index: -1;
+		@include animation(show-if-animation-enabled .01s forwards);
+	}
+	&.in-view {
+		@include animation(hole-glow 2s infinite alternate);
+		.rabbit {
+			@include animation(show-if-animation-enabled .01s forwards, rabbit-down 3s forwards);
+		}
+	}
+}
+
+@include keyframes(rabbit-down) {
+    100% { top: 100% }
+}
+
+@include keyframes(hole-glow) {
+    0% { background-size: 100% auto, 100% 100%; }
+    100% { background-size: 100% auto, 120% 120%; }
+}
+
+#to-tunnels {
+	@extend %imgreplace;
+	position: absolute;
+	top: 13%; left: 62%;
+	width: 29%; height: 16%;
 }
 
 .page_tunnels {
@@ -199,18 +242,12 @@ $sleepy-eyes: 'eyes';
 	height:600px;
 	position: relative;
 	z-index: 0;
-	@include background-size( auto 100%);
+	@include background-size( 100% auto);
 	@include background-origin( padding-box);
 }
 
 
 // The Tunnel
-#to-tunnels {
-	@extend %imgreplace;
-	position: absolute;
-	top: 175px; left: 385px;
-	width: 245px; height: 95px;
-}
 
 #tunnel {
 	position: relative;
