--- a/book/css/screen.css
+++ b/book/css/screen.css
@@ -63,13 +63,13 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   display: block;
 }
 
-/* line 8, ../scss/screen.scss */
+/* line 14, ../scss/screen.scss */
 html, body {
   background: #000;
   height: 100%;
 }
 
-/* line 13, ../scss/screen.scss */
+/* line 19, ../scss/screen.scss */
 p {
   position: absolute;
   overflow: hidden;
@@ -79,17 +79,17 @@ p {
   margin: -1px;
 }
 
-/* line 21, ../scss/screen.scss */
+/* line 27, ../scss/screen.scss */
 .loading, .scene:not(.scene-park) {
   display: none !important;
 }
 
-/* line 25, ../scss/screen.scss */
+/* line 31, ../scss/screen.scss */
 .scene.cue {
   display: block !important;
 }
 
-/* line 29, ../scss/screen.scss */
+/* line 35, ../scss/screen.scss */
 .page_rabbit-appears .rabbit, #to-tunnels, .page {
   text-indent: 100%;
   white-space: nowrap;
@@ -97,82 +97,82 @@ p {
 }
 
 @-moz-keyframes hide-if-animation-enabled {
-  /* line 39, ../scss/screen.scss */
+  /* line 45, ../scss/screen.scss */
   100% {
     opacity: 0;
   }
 }
 
 @-webkit-keyframes hide-if-animation-enabled {
-  /* line 39, ../scss/screen.scss */
+  /* line 45, ../scss/screen.scss */
   100% {
     opacity: 0;
   }
 }
 
 @-o-keyframes hide-if-animation-enabled {
-  /* line 39, ../scss/screen.scss */
+  /* line 45, ../scss/screen.scss */
   100% {
     opacity: 0;
   }
 }
 
 @keyframes hide-if-animation-enabled {
-  /* line 39, ../scss/screen.scss */
+  /* line 45, ../scss/screen.scss */
   100% {
     opacity: 0;
   }
 }
 
 @-moz-keyframes show-if-animation-enabled {
-  /* line 42, ../scss/screen.scss */
+  /* line 48, ../scss/screen.scss */
   100% {
     opacity: 1;
   }
 }
 
 @-webkit-keyframes show-if-animation-enabled {
-  /* line 42, ../scss/screen.scss */
+  /* line 48, ../scss/screen.scss */
   100% {
     opacity: 1;
   }
 }
 
 @-o-keyframes show-if-animation-enabled {
-  /* line 42, ../scss/screen.scss */
+  /* line 48, ../scss/screen.scss */
   100% {
     opacity: 1;
   }
 }
 
 @keyframes show-if-animation-enabled {
-  /* line 42, ../scss/screen.scss */
+  /* line 48, ../scss/screen.scss */
   100% {
     opacity: 1;
   }
 }
 
-/* line 56, ../scss/screen.scss */
+/* line 63, ../scss/screen.scss */
 .loading, .scene {
   margin: 0 auto;
   width: 800px;
 }
 
-/* line 71, ../scss/screen.scss */
+/* line 78, ../scss/screen.scss */
 .scene-park {
   padding-bottom: 2px;
 }
 
-/* line 76, ../scss/screen.scss */
+/* line 83, ../scss/screen.scss */
 .page_sitting-in-the-park {
   background: url('../img/bg_park1.jpg?1377318992') no-repeat;
 }
 
-/* line 81, ../scss/screen.scss */
+/* line 88, ../scss/screen.scss */
 .page_alice-is-bored {
   background: url('../img/bg_park2.jpg?1377374754') no-repeat;
 }
-/* line 83, ../scss/screen.scss */
+/* line 90, ../scss/screen.scss */
 .page_alice-is-bored .eyes {
   width: 124px;
   height: 57px;
@@ -180,11 +180,11 @@ p {
   left: 83px;
 }
 
-/* line 92, ../scss/screen.scss */
+/* line 99, ../scss/screen.scss */
 .page_rabbit-appears {
   background: url('../img/bg_park3.jpg?1377381587') no-repeat;
 }
-/* line 94, ../scss/screen.scss */
+/* line 101, ../scss/screen.scss */
 .page_rabbit-appears .blink {
   background: url('../img/blink.svg?1377386293') 0 100% no-repeat;
   -webkit-background-size: 100% auto;
@@ -196,16 +196,16 @@ p {
   height: 100%;
   z-index: 2;
 }
-/* line 101, ../scss/screen.scss */
+/* line 108, ../scss/screen.scss */
 .page_rabbit-appears.in-view .blink {
   -webkit-animation: scene-blink 0.75s steps(5) 5 -1s alternate;
   -moz-animation: scene-blink 0.75s steps(5) 5 -1s alternate;
   -o-animation: scene-blink 0.75s steps(5) 5 -1s alternate;
   animation: scene-blink 0.75s steps(5) 5 -1s alternate;
 }
-/* line 104, ../scss/screen.scss */
+/* line 111, ../scss/screen.scss */
 .page_rabbit-appears .rabbit {
-  background: url('../img/rabbit_running.png?1377381538');
+  background: url('../img/rabbit_running.png?1377546276');
   width: 444px;
   height: 490px;
   position: absolute;
@@ -219,7 +219,7 @@ p {
   -o-animation: hide-if-animation-enabled 0.01s forwards;
   animation: hide-if-animation-enabled 0.01s forwards;
 }
-/* line 114, ../scss/screen.scss */
+/* line 121, ../scss/screen.scss */
 .page_rabbit-appears.in-view .rabbit {
   -webkit-animation: rabbit-run 10s forwards;
   -moz-animation: rabbit-run 10s forwards;
@@ -228,65 +228,65 @@ p {
 }
 
 @-moz-keyframes scene-blink {
-  /* line 121, ../scss/screen.scss */
+  /* line 128, ../scss/screen.scss */
   0% {
     background-position: 0 0;
   }
 
-  /* line 122, ../scss/screen.scss */
+  /* line 129, ../scss/screen.scss */
   100% {
     background-position: 0 125%;
   }
 }
 
 @-webkit-keyframes scene-blink {
-  /* line 121, ../scss/screen.scss */
+  /* line 128, ../scss/screen.scss */
   0% {
     background-position: 0 0;
   }
 
-  /* line 122, ../scss/screen.scss */
+  /* line 129, ../scss/screen.scss */
   100% {
     background-position: 0 125%;
   }
 }
 
 @-o-keyframes scene-blink {
-  /* line 121, ../scss/screen.scss */
+  /* line 128, ../scss/screen.scss */
   0% {
     background-position: 0 0;
   }
 
-  /* line 122, ../scss/screen.scss */
+  /* line 129, ../scss/screen.scss */
   100% {
     background-position: 0 125%;
   }
 }
 
 @keyframes scene-blink {
-  /* line 121, ../scss/screen.scss */
+  /* line 128, ../scss/screen.scss */
   0% {
     background-position: 0 0;
   }
 
-  /* line 122, ../scss/screen.scss */
+  /* line 129, ../scss/screen.scss */
   100% {
     background-position: 0 125%;
   }
 }
 
 @-moz-keyframes rabbit-run {
-  /* line 126, ../scss/screen.scss */
+  /* line 133, ../scss/screen.scss */
   0% {
     left: -100%;
   }
 
-  /* line 129, ../scss/screen.scss */
+  /* line 136, ../scss/screen.scss */
   50% {
     top: 80%;
   }
 
-  /* line 132, ../scss/screen.scss */
+  /* line 139, ../scss/screen.scss */
   100% {
     top: 60%;
     left: 200%;
@@ -294,17 +294,17 @@ p {
 }
 
 @-webkit-keyframes rabbit-run {
-  /* line 126, ../scss/screen.scss */
+  /* line 133, ../scss/screen.scss */
   0% {
     left: -100%;
   }
 
-  /* line 129, ../scss/screen.scss */
+  /* line 136, ../scss/screen.scss */
   50% {
     top: 80%;
   }
 
-  /* line 132, ../scss/screen.scss */
+  /* line 139, ../scss/screen.scss */
   100% {
     top: 60%;
     left: 200%;
@@ -312,17 +312,17 @@ p {
 }
 
 @-o-keyframes rabbit-run {
-  /* line 126, ../scss/screen.scss */
+  /* line 133, ../scss/screen.scss */
   0% {
     left: -100%;
   }
 
-  /* line 129, ../scss/screen.scss */
+  /* line 136, ../scss/screen.scss */
   50% {
     top: 80%;
   }
 
-  /* line 132, ../scss/screen.scss */
+  /* line 139, ../scss/screen.scss */
   100% {
     top: 60%;
     left: 200%;
@@ -330,36 +330,113 @@ p {
 }
 
 @keyframes rabbit-run {
-  /* line 126, ../scss/screen.scss */
+  /* line 133, ../scss/screen.scss */
   0% {
     left: -100%;
   }
 
-  /* line 129, ../scss/screen.scss */
+  /* line 136, ../scss/screen.scss */
   50% {
     top: 80%;
   }
 
-  /* line 132, ../scss/screen.scss */
+  /* line 139, ../scss/screen.scss */
   100% {
     top: 60%;
     left: 200%;
   }
 }
 
-/* line 138, ../scss/screen.scss */
+/* line 145, ../scss/screen.scss */
 .page_rabbit-chase {
   background: url('../img/bg_park4.jpg?1377489323') no-repeat;
 }
+/* line 147, ../scss/screen.scss */
+.page_rabbit-chase .alice {
+  background: url('../img/park4_alice.png?1377546135');
+  -webkit-background-size: 100% 100%;
+  -moz-background-size: 100% 100%;
+  -o-background-size: 100% 100%;
+  background-size: 100% 100%;
+  position: absolute;
+  bottom: 0;
+  left: 34%;
+  width: 189.84375px;
+  height: 154.6875px;
+}
+/* line 152, ../scss/screen.scss */
+.csstransitions .page_rabbit-chase .alice {
+  left: -50%;
+}
+/* line 155, ../scss/screen.scss */
+.page_rabbit-chase .rabbit1 {
+  background: url('../img/park4_rabbit1.png?1377546166');
+  -webkit-background-size: 100% 100%;
+  -moz-background-size: 100% 100%;
+  -o-background-size: 100% 100%;
+  background-size: 100% 100%;
+  position: absolute;
+  top: 33%;
+  left: 46%;
+  width: 66.79688px;
+  height: 194.14063px;
+}
+/* line 162, ../scss/screen.scss */
+.page_rabbit-chase .rabbit2 {
+  background: url('../img/park4_rabbit2.png?1377546242');
+  -webkit-background-size: 100% 100%;
+  -moz-background-size: 100% 100%;
+  -o-background-size: 100% 100%;
+  background-size: 100% 100%;
+  position: absolute;
+  bottom: 0;
+  left: 70%;
+  width: 162.10938px;
+  height: 148.82813px;
+}
+/* line 167, ../scss/screen.scss */
+.csstransitions .page_rabbit-chase .rabbit2 {
+  left: -50%;
+}
+/* line 172, ../scss/screen.scss */
+.csstransitions .page_rabbit-chase.in-view .rabbit1 {
+  -webkit-transition: -webkit-transform 2s ease-in;
+  -moz-transition: -moz-transform 2s ease-in;
+  -o-transition: -o-transform 2s ease-in;
+  transition: transform 2s ease-in;
+  -webkit-transform: perspective(0) scale(0.8, 0.8);
+  -moz-transform: perspective(0) scale(0.8, 0.8);
+  -ms-transform: perspective(0) scale(0.8, 0.8);
+  -o-transform: perspective(0) scale(0.8, 0.8);
+  transform: perspective(0) scale(0.8, 0.8);
+}
+/* line 177, ../scss/screen.scss */
+.csstransitions .page_rabbit-chase.in-view .rabbit2 {
+  -webkit-transition: left 3s ease-in;
+  -webkit-transition-delay: 3s;
+  -moz-transition: left 3s ease-in 3s;
+  -o-transition: left 3s ease-in 3s;
+  transition: left 3s ease-in 3s;
+  left: 100%;
+}
+/* line 181, ../scss/screen.scss */
+.csstransitions .page_rabbit-chase.in-view .alice {
+  -webkit-transition: left 3s ease-in;
+  -webkit-transition-delay: 3.5s;
+  -moz-transition: left 3s ease-in 3.5s;
+  -o-transition: left 3s ease-in 3.5s;
+  transition: left 3s ease-in 3.5s;
+  left: 100%;
+}
 
-/* line 142, ../scss/screen.scss */
+/* line 188, ../scss/screen.scss */
 .page_the-hole {
   background: url('../img/bg_park5_1.png?1377532988') no-repeat, -webkit-radial-gradient(70% 60%, circle closest-side, #eb125d, #000000);
   background: url('../img/bg_park5_1.png?1377532988') no-repeat, -moz-radial-gradient(70% 60%, circle closest-side, #eb125d, #000000);
   background: url('../img/bg_park5_1.png?1377532988') no-repeat, -o-radial-gradient(70% 60%, circle closest-side, #eb125d, #000000);
   background: url('../img/bg_park5_1.png?1377532988') no-repeat, radial-gradient(70% 60%, circle closest-side, #eb125d, #000000);
 }
-/* line 145, ../scss/screen.scss */
+/* line 192, ../scss/screen.scss */
 .page_the-hole .foreground {
   height: 100%;
   background: url('../img/bg_park5_2.png?1377533067') no-repeat 100% 100%;
@@ -368,7 +445,7 @@ p {
   -o-background-size: 100% auto;
   background-size: 100% auto;
 }
-/* line 150, ../scss/screen.scss */
+/* line 197, ../scss/screen.scss */
 .page_the-hole .rabbit {
   background: url('../img/park5_rabbit.png?1377535949');
   -webkit-background-size: 100% 100%;
@@ -388,14 +465,14 @@ p {
   -o-animation: show-if-animation-enabled 0.01s forwards;
   animation: show-if-animation-enabled 0.01s forwards;
 }
-/* line 160, ../scss/screen.scss */
+/* line 207, ../scss/screen.scss */
 .page_the-hole.in-view {
   -webkit-animation: hole-glow 2s infinite alternate;
   -moz-animation: hole-glow 2s infinite alternate;
   -o-animation: hole-glow 2s infinite alternate;
   animation: hole-glow 2s infinite alternate;
 }
-/* line 162, ../scss/screen.scss */
+/* line 209, ../scss/screen.scss */
 .page_the-hole.in-view .rabbit {
   -webkit-animation: show-if-animation-enabled 0.01s forwards, rabbit-down 3s forwards;
   -moz-animation: show-if-animation-enabled 0.01s forwards, rabbit-down 3s forwards;
@@ -404,82 +481,82 @@ p {
 }
 
 @-moz-keyframes rabbit-down {
-  /* line 169, ../scss/screen.scss */
+  /* line 216, ../scss/screen.scss */
   100% {
     top: 100%;
   }
 }
 
 @-webkit-keyframes rabbit-down {
-  /* line 169, ../scss/screen.scss */
+  /* line 216, ../scss/screen.scss */
   100% {
     top: 100%;
   }
 }
 
 @-o-keyframes rabbit-down {
-  /* line 169, ../scss/screen.scss */
+  /* line 216, ../scss/screen.scss */
   100% {
     top: 100%;
   }
 }
 
 @keyframes rabbit-down {
-  /* line 169, ../scss/screen.scss */
+  /* line 216, ../scss/screen.scss */
   100% {
     top: 100%;
   }
 }
 
 @-moz-keyframes hole-glow {
-  /* line 173, ../scss/screen.scss */
+  /* line 220, ../scss/screen.scss */
   0% {
     background-size: 100% auto, 100% 100%;
   }
 
-  /* line 174, ../scss/screen.scss */
+  /* line 221, ../scss/screen.scss */
   100% {
     background-size: 100% auto, 120% 120%;
   }
 }
 
 @-webkit-keyframes hole-glow {
-  /* line 173, ../scss/screen.scss */
+  /* line 220, ../scss/screen.scss */
   0% {
     background-size: 100% auto, 100% 100%;
   }
 
-  /* line 174, ../scss/screen.scss */
+  /* line 221, ../scss/screen.scss */
   100% {
     background-size: 100% auto, 120% 120%;
   }
 }
 
 @-o-keyframes hole-glow {
-  /* line 173, ../scss/screen.scss */
+  /* line 220, ../scss/screen.scss */
   0% {
     background-size: 100% auto, 100% 100%;
   }
 
-  /* line 174, ../scss/screen.scss */
+  /* line 221, ../scss/screen.scss */
   100% {
     background-size: 100% auto, 120% 120%;
   }
 }
 
 @keyframes hole-glow {
-  /* line 173, ../scss/screen.scss */
+  /* line 220, ../scss/screen.scss */
   0% {
     background-size: 100% auto, 100% 100%;
   }
 
-  /* line 174, ../scss/screen.scss */
+  /* line 221, ../scss/screen.scss */
   100% {
     background-size: 100% auto, 120% 120%;
   }
 }
 
-/* line 177, ../scss/screen.scss */
+/* line 224, ../scss/screen.scss */
 #to-tunnels {
   position: absolute;
   top: 13%;
@@ -488,77 +565,77 @@ p {
   height: 16%;
 }
 
-/* line 184, ../scss/screen.scss */
+/* line 231, ../scss/screen.scss */
 .page_tunnels {
   background: url('../img/../../storyboard/storyboard6.jpg?1375563243') no-repeat;
 }
 
-/* line 188, ../scss/screen.scss */
+/* line 235, ../scss/screen.scss */
 .falling_frightened {
   background: url('../img/../../storyboard/storyboard7.jpg?1375559487') no-repeat;
 }
 
-/* line 192, ../scss/screen.scss */
+/* line 239, ../scss/screen.scss */
 .falling_curious {
   background: url('../img/../../storyboard/storyboard8.jpg?1375559676') no-repeat;
 }
 
-/* line 196, ../scss/screen.scss */
+/* line 243, ../scss/screen.scss */
 .falling_bored {
   background: url('../img/../../storyboard/storyboard9.jpg?1375559976') no-repeat;
 }
 
-/* line 200, ../scss/screen.scss */
+/* line 247, ../scss/screen.scss */
 .falling_sleeping {
   background: url('../img/../../storyboard/storyboard10.jpg?1375560220') no-repeat;
 }
 
-/* line 204, ../scss/screen.scss */
+/* line 251, ../scss/screen.scss */
 .falling_waking {
   background: url('../img/../../storyboard/storyboard11.jpg?1375560454') no-repeat;
 }
 
-/* line 208, ../scss/screen.scss */
+/* line 255, ../scss/screen.scss */
 .falling_weird {
   background: url('../img/../../storyboard/storyboard12.jpg?1375561139') no-repeat;
 }
 
-/* line 212, ../scss/screen.scss */
+/* line 259, ../scss/screen.scss */
 .falling_aftermath {
   background: url('../img/../../storyboard/storyboard13.jpg?1375561165') no-repeat;
 }
 
-/* line 216, ../scss/screen.scss */
+/* line 263, ../scss/screen.scss */
 .falling_lookit-cat {
   background: url('../img/../../storyboard/storyboard14.jpg?1375561534') no-repeat;
 }
 
-/* line 220, ../scss/screen.scss */
+/* line 267, ../scss/screen.scss */
 .falling_cat-reveal {
   background: url('../img/../../storyboard/storyboard15.jpg?1375561517') no-repeat;
 }
 
-/* line 224, ../scss/screen.scss */
+/* line 271, ../scss/screen.scss */
 .falling_cat-out {
   background: url('../img/../../storyboard/storyboard16.jpg?1375561688') no-repeat;
 }
 
-/* line 228, ../scss/screen.scss */
+/* line 275, ../scss/screen.scss */
 .scene-cut {
   background: url('../img/../../storyboard/storyboard17.png?1375561755') no-repeat;
 }
 
-/* line 232, ../scss/screen.scss */
+/* line 279, ../scss/screen.scss */
 .page_crash-landing {
   background: url('../img/../../storyboard/storyboard18.jpg?1375563055') no-repeat;
 }
 
-/* line 236, ../scss/screen.scss */
+/* line 283, ../scss/screen.scss */
 .page_credits {
   background: url('../img/../../storyboard/storyboard19.jpg?1375563030') no-repeat;
 }
 
-/* line 240, ../scss/screen.scss */
+/* line 287, ../scss/screen.scss */
 .page {
   height: 600px;
   position: relative;
@@ -572,17 +649,17 @@ p {
   background-origin: padding-box;
 }
 
-/* line 252, ../scss/screen.scss */
+/* line 299, ../scss/screen.scss */
 #tunnel {
   position: relative;
 }
 
-/* line 257, ../scss/screen.scss */
+/* line 304, ../scss/screen.scss */
 .page_falling {
   z-index: -1;
 }
 
-/* line 260, ../scss/screen.scss */
+/* line 307, ../scss/screen.scss */
 .scene-cut {
   background: #000;
   height: 100%;
@@ -597,7 +674,7 @@ p {
   transition: opacity 2s ease-out 2s;
   z-index: 10;
 }
-/* line 268, ../scss/screen.scss */
+/* line 315, ../scss/screen.scss */
 .scene-cut.cue {
   -webkit-animation: fadeOutFromNone 2s forwards;
   -moz-animation: fadeOutFromNone 2s forwards;
@@ -606,68 +683,68 @@ p {
 }
 
 @-moz-keyframes fadeOutFromNone {
-  /* line 276, ../scss/screen.scss */
+  /* line 323, ../scss/screen.scss */
   0% {
     opacity: 1;
   }
 
-  /* line 277, ../scss/screen.scss */
+  /* line 324, ../scss/screen.scss */
   1% {
     opacity: 1;
   }
 
-  /* line 278, ../scss/screen.scss */
+  /* line 325, ../scss/screen.scss */
   100% {
     opacity: 0;
   }
 }
 
 @-webkit-keyframes fadeOutFromNone {
-  /* line 276, ../scss/screen.scss */
+  /* line 323, ../scss/screen.scss */
   0% {
     opacity: 1;
   }
 
-  /* line 277, ../scss/screen.scss */
+  /* line 324, ../scss/screen.scss */
   1% {
     opacity: 1;
   }
 
-  /* line 278, ../scss/screen.scss */
+  /* line 325, ../scss/screen.scss */
   100% {
     opacity: 0;
   }
 }
 
 @-o-keyframes fadeOutFromNone {
-  /* line 276, ../scss/screen.scss */
+  /* line 323, ../scss/screen.scss */
   0% {
     opacity: 1;
   }
 
-  /* line 277, ../scss/screen.scss */
+  /* line 324, ../scss/screen.scss */
   1% {
     opacity: 1;
   }
 
-  /* line 278, ../scss/screen.scss */
+  /* line 325, ../scss/screen.scss */
   100% {
     opacity: 0;
   }
 }
 
 @keyframes fadeOutFromNone {
-  /* line 276, ../scss/screen.scss */
+  /* line 323, ../scss/screen.scss */
   0% {
     opacity: 1;
   }
 
-  /* line 277, ../scss/screen.scss */
+  /* line 324, ../scss/screen.scss */
   1% {
     opacity: 1;
   }
 
-  /* line 278, ../scss/screen.scss */
+  /* line 325, ../scss/screen.scss */
   100% {
     opacity: 0;
   }
